--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"  # Specify your desired Python version
+python = ">=3.9"  # Specify your desired Python version
 beautifulsoup4 = "*"
 ffmpeg-python = ">=0.2.0"
 numpy = "1.23.5"
