--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,9 @@ scipy = "1.11.1"
 sounddevice = "0.4.6"
 soundfile = "0.12.1"
 noisereduce = "*"
-torch = { url = "https://download.pytorch.org/whl/cu121"}
-torchaudio = { url = "https://download.pytorch.org/whl/cu121"}
-torchvision = { url = "https://download.pytorch.org/whl/cu121"}
+torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp310-cp310-linux_x86_64.whl"}
+torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.2%2Bcu121-cp310-cp3100-linux_amd64.whl"}
+torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp310-cp310-linux_x86_64.whl"}
 fairseq = {git = "https://github.com/IAHispano/fairseq", platform = "linux"}
 numba = "*"
 onnxruntime = "*"
