--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ noisereduce = "*"
 torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp310-cp310-linux_x86_64.whl"}
 torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.2%2Bcu121-cp310-cp310-linux_x86_64.whl"}
 torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp310-cp310-linux_x86_64.whl"}
-fairseq = {git = "https://github.com/IAHispano/fairseq", platform = "linux"}
+fairseq = "*"
 numba = "*"
 onnxruntime = "*"
 onnxruntime_gpu = "1.15.1"
